# validvcf

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: error_codes.rs  lib.rs  main.rs  maybe_gz_reader.rs  vcf_validate.rs
test_vcf/: HG001_corrupted_format.vcf  HG001_head.vcf.bgz  HG001_missed_info.vcf  HG001_missed_info_empty.vcf  HG001_missed_info_point.vcf
tests/: cli_tests.rs
