[package]
name = "validvcf"
version = "0.1.0"
edition = "2021"
authors = ["Gennadii Zakharov <you@example.com>"]
description = "A fast and simple VCF validator (CLI template)"
license = ""
repository = ""
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
flate2 = "1"

[dev-dependencies]
assert_cmd = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
